# 2D-Lighting

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
include/: Block.h  Framebuffer.h  Game.h  Light.h  OrthographicCamera.h  OrthographicCameraController.h  Renderer.h  VertexArray.h  Vertices.h  pch.h  player.h  shader.h
shader/: 2D-Lighting.vs  irregularQuadShader.fs  irregularQuadShader.vs  light.fs  light.vs  singleTexture.fs  singleTexture.vs  texture.fs  texture.vs
src/: Block.cpp  Framebuffer.cpp  Game.cpp  Light.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  Renderer.cpp  VertexArray.cpp  buffer.cpp
